[package]
name         = "esp-idf-part"
version      = "0.5.0"
authors      = ["Jesse Braham <jesse@beta7.io>"]
edition      = "2021"
rust-version = "1.61"
description  = "A library for parsing and generating ESP-IDF partition tables"
repository   = "https://github.com/esp-rs/esp-idf-part"
license      = "MIT OR Apache-2.0"
keywords     = ["esp-idf", "partition", "partition-table"]
categories   = ["embedded", "parsing"]

[dependencies]
bitflags = "2.8.0"
heapless = "0.8.0"
md-5     = { version = "0.10.6", default-features = false }
serde    = { version = "1.0.217", default-features = false, features = ["derive"] }
